add CMS hashnode

--- a/apps/frontend/src/pages/index.astro
+++ b/apps/frontend/src/pages/index.astro
@@ -1,7 +1,9 @@
 ---
+import { getAllPosts } from '../lib/client';
 
+const data = await getAllPosts();
+const allPosts = data.publication.posts.edges;
 ---
-
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
@@ -11,6 +13,14 @@
 		<title>Astro</title>
 	</head>
 	<body>
-		<h1>Astro</h1>
+            <h1>Astro</h1>
+            {
+            allPosts.map((post) => (
+                <div>
+                    <h2>{post.node.title}</h2>
+                    <a href={`/post/${post.node.slug}`}>Read more</a>
+                </div>
+            ))
+        }
 	</body>
 </html>
