--- a/apps/frontend/src/pages/index.astro
+++ b/apps/frontend/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import { getAllPosts } from '../lib/client';
+import { MyComponent } from '@drowr/licid'
 
 const data = await getAllPosts();
 const allPosts = data.publication.posts.edges;
@@ -13,6 +14,7 @@ const allPosts = data.publication.posts.edges;
 		<title>Astro</title>
 	</head>
 	<body>
+            <MyComponent prefix="Hello" />
             <h1>Astro</h1>
             {
             allPosts.map((post) => (
