add biome, prettier, eslint

--- a/packages/licid/src/Card/Outlined.astro
+++ b/packages/licid/src/Card/Outlined.astro
@@ -1,9 +1,9 @@
 ---
-import "../styles.css"
+import '../styles.css';
 
 interface Props {
-prefix?: string,
-title?: string;
+    prefix?: string;
+    title?: string;
 }
 ---
 <div class="card-outlined bg-surface text-primary border border-outline rounded-xl hover:border-outlineVariant">
