--- a/packages/licid/src/MyComponent.astro
+++ b/packages/licid/src/MyComponent.astro
@@ -1,8 +1,9 @@
 ---
-import './styles.css'
+import './styles.css';
+
 // Write your component code in this file!
 interface Props {
-	prefix?: string;
+    prefix?: string;
 }
 ---
 <style>
