--- a/apps/frontend/src/pages/post/[slug].astro
+++ b/apps/frontend/src/pages/post/[slug].astro
@@ -1,5 +1,5 @@
 ---
-import { getAllPosts, getPost } from '../../lib/client';
+import { getAllPosts, getPost } from "../../lib/client";
 
 export async function getStaticPaths() {
   const data = await getAllPosts();
@@ -7,22 +7,23 @@ export async function getStaticPaths() {
   return allPosts.map((post) => {
     return {
       params: { slug: post.node.slug },
-    }
-  })
+    };
+  });
 }
 const { slug } = Astro.params;
 const post = await getPost(slug);
 ---
-<!DOCTYPE html>
+
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{post.title}</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>{post.title}</h1>
     <Fragment set:html={post.content.html} />
     <a href="/">back home</a>
-</body>
+  </body>
 </html>
