--- a/packages/licid/src/styles.css
+++ b/packages/licid/src/styles.css
@@ -1,21 +1,30 @@
 @import "tailwindcss";
-@import "./global-fonts.css";
 
 /* You need to add each component you use here...
+@import "./global-fonts.css";
 @source "../../../packages/products/feat-product-detail";
 @source "../../../packages/shared/ui";
 @source "./Card/Outlined.astro";
 */
 
 @theme {
-  --font-serif: "typeface-plain", serif;
-  --font-body-medium: "body-medium", serif;
-  --font-display-large: "display-large", serif;
-  --color-primary: #83d2e3;
-  --color-surface: #0e1416;
-  --color-onSurface: #dee3e5;
-  --color-outline: #899295;
-  --color-outlineVariant: #3f484a;
+  /* light colors */
+  --color-primary: #006877;
+  --color-surface: #f5fafc;
+  --color-onSurface: #171d1e;
+  --color-outline: #6f797b;
+  --color-outlineVariant: #bfc8ca;
+  /* dark colors */
+  --color-dark-primary: #83d2e3;
+  --color-dark-surface: #0e1416;
+  --color-dark-onSurface: #dee3e5;
+  --color-dark-outline: #899295;
+  --color-dark-outlineVariant: #3f484a;
+}
+
+@theme inline {
+  --font-plain: var(--font-plain);
+  --font-brand: var(--font-brand);
 }
 
 :root {
@@ -25,4 +34,10 @@
     229,
     0.08
   ); /* convert onSurface into rgb */
+}
+
+@layer components {
+  .container {
+    @apply mx-auto px-4 xl:max-w-330;
+  }
 }
