--- a/packages/licid/src/Typo/DisplayLarge.astro
+++ b/packages/licid/src/Typo/DisplayLarge.astro
@@ -6,8 +6,6 @@ interface Props {
 }
 ---
 
-<h1
-  class="font-plain text-[57pt] leading-[64pt] font-medium tracking-[0] font-stretch-normal"
->
+<h1 class="display-large">
   {Astro.props.title}
 </h1>
