--- a/apps/frontend/src/pages/index.astro
+++ b/apps/frontend/src/pages/index.astro
@@ -16,16 +16,19 @@ const allPosts = data.publication.posts.edges;
       Hello world! from base body-medium
     </h1>
     <MyComponent prefix="Hello" />
+    {JSON.stringify(allPosts)}
     <TypoDisplayLarge title="Astro" />
     {
       allPosts.map((post) => (
-        <CardOutlined>
-          <Fragment slot="header">
-            <h2>{post.node.title}</h2>
-          </Fragment>
-          <Fragment slot="footer">
-            <a href={`/post/${post.node.slug}`}>Read more</a>
-          </Fragment>
+        <CardOutlined
+          brief={post.node.subtitle}
+          title={post.node.title}
+          publishedAt={post.node.publishedAt}
+          tags={post.node.tags}
+          slug={post.node.slug}
+        >
+          <Fragment slot="header"></Fragment>
+          <Fragment slot="footer" />
         </CardOutlined>
       ))
     }
