--- a/packages/licid/src/Logo.astro
+++ b/packages/licid/src/Logo.astro
@@ -19,7 +19,7 @@ const { logoImage = logoSrc, logoText = "Drowr" } = Astro.props;
     height="60"
     alt="drowr"
     style="height: 60px;"
-    loading="lazy"
+    loading="eager"
     decoding="async"
     format="webp"
   />
