--- a/packages/licid/src/blocks/markdown/code.astro
+++ b/packages/licid/src/blocks/markdown/code.astro
@@ -11,11 +11,12 @@ import "../../styles.css";
 
   .code-markdown {
     h2 {
-      @apply text-primary dark:text-dark-primary border-b-primary my-4 border-b;
+      @apply text-primary dark:text-dark-primary border-b-primary my-6 border-b;
       @apply font-brand text-[22pt] leading-[28pt] font-normal tracking-[0] not-italic font-stretch-normal;
     }
     pre.astro-code {
-      @apply my-4 rounded-lg p-2;
+      @apply my-6 rounded-lg p-2;
+      @apply font-brand text-[12pt] leading-[16pt] font-normal tracking-[0.1pt] not-italic font-stretch-normal;
     }
     p {
       @apply font-brand text-[14pt] leading-[20pt] font-normal tracking-[0] not-italic font-stretch-normal;
