--- a/packages/licid/src/components/header/ThemeSwitcher.astro
+++ b/packages/licid/src/components/header/ThemeSwitcher.astro
@@ -1,6 +1,4 @@
 ---
-import "../../styles.css";
-
 import IconDarkMode from "../../assets/icons/dark-mode.svg";
 import ButtonIcon from "../button/IconStandard.astro";
 ---
@@ -17,52 +15,51 @@ import ButtonIcon from "../button/IconStandard.astro";
 </div>
 
 <script>
-  const matchMedia = window.matchMedia("(prefers-color-scheme: dark)");
-
-  const button = document.getElementById("theme-switcher");
-  button.addEventListener("click", function () {
-    toggleTheme();
-  });
-
-  function toggleTheme() {
-    const defaultTheme = matchMedia.matches ? "dark" : "light";
-    const currentTheme = localStorage.getItem("theme") || defaultTheme;
-
-    if (currentTheme === "light") {
-      console.log("is light, toggle");
-      localStorage.setItem("theme", "dark");
-      window.matchMedia("(prefers-color-scheme: dark)");
-    } else {
-      console.log("is dark, toggle");
-      localStorage.setItem("theme", "light");
-      window.matchMedia("(prefers-color-scheme: light)");
-    }
-
-    document.documentElement.classList.toggle(
-      "dark",
-      localStorage.getItem("theme") === "dark" ||
+  if (document.documentElement.classList.contains("mode-auto")) {
+    const applyTheme = () => {
+      if (
+        localStorage.theme === "dark" ||
         (!("theme" in localStorage) &&
-          window.matchMedia("(prefers-color-scheme: dark)").matches),
-    );
+          window.matchMedia("(prefers-color-scheme: dark)").matches)
+      ) {
+        document.documentElement.classList.add("dark");
+      } else {
+        document.documentElement.classList.remove("dark");
+      }
+    };
+
+    // toggle
+    const setupThemeSwitcher = () => {
+      const themeSwitcher = document.getElementById("theme-switcher");
+      if (themeSwitcher) {
+        themeSwitcher.addEventListener("click", () => {
+          if (localStorage.theme === "dark") {
+            localStorage.theme = "light";
+            document.documentElement.classList.remove("dark");
+          } else {
+            localStorage.theme = "dark";
+            document.documentElement.classList.add("dark");
+          }
+        });
+      }
+    };
+
+    document.addEventListener("DOMContentLoaded", () => {
+      applyTheme();
+      setupThemeSwitcher();
+    });
+    document.addEventListener("astro:page-loaded", () => {
+      applyTheme();
+      setupThemeSwitcher();
+    });
+    // Runs on view transitions navigation
+    document.addEventListener("astro:after-swap", () => {
+      applyTheme();
+      setupThemeSwitcher();
+    });
+  } else if (document.documentElement.classList.contains("mode-dark")) {
+    document.documentElement.classList.add("dark");
+  } else if (document.documentElement.classList.contains("mode-light")) {
+    document.documentElement.classList.remove("dark");
   }
-
-  const setDarkMode = () => {
-    const defaultTheme = matchMedia.matches ? "dark" : "light";
-    const currentTheme = localStorage.getItem("theme") || defaultTheme;
-
-    document.documentElement.classList.toggle(
-      "dark",
-      currentTheme === "dark" ||
-        (!("theme" in localStorage) &&
-          window.matchMedia("(prefers-color-scheme: dark)").matches),
-    );
-
-    console.log(`setDarkMode to ${currentTheme}`);
-  };
-
-  // Runs on initial navigation
-  setDarkMode();
-
-  // Runs on view transitions navigation
-  document.addEventListener("astro:after-swap", setDarkMode);
 </script>
