add /post route

--- a/packages/licid/src/blocks/hero/Home.astro
+++ b/packages/licid/src/blocks/hero/Home.astro
@@ -32,7 +32,7 @@ const { author } = Astro.props;
         class="bg-outlineVariant dark:bg-dark-outlineVariant text-onSurfaceVariant dark:text-dark-onSurfaceVariant flex min-h-14 rounded-full"
       >
         <div class="hover:bg-onPrimary/10 dark:hover:bg-dark-onPrimary/10 flex">
-          <a class="flex items-center px-6" href="/">
+          <a class="flex items-center px-6" href="/post">
             <span class="label-medium">Look posts</span>
           </a>
         </div>
