rewrite to /posts and move into blocks

--- a/apps/frontend/src/components/TagNavigation.astro
+++ b/apps/frontend/src/components/TagNavigation.astro
@@ -1,6 +1,6 @@
 ---
-import { getAllPosts } from "../lib/client";
 import { ChipsFilter } from "@drowr/licid";
+import { getAllPosts } from "@/lib/client";
 
 const data = await getAllPosts();
 const allPosts = data.publication.posts.edges;
@@ -10,21 +10,28 @@ const currentPath = new URL(Astro.request.url).pathname;
 const pathSegments = currentPath
   .split("/")
   .filter((segment) => segment.length > 0);
-const currentTag = pathSegments[pathSegments.length - 1] || "";
-console.log(currentTag);
+
+const atest = (word) => {
+  const currentTag = pathSegments[pathSegments.length - 1] || "";
+  //console.log(currentTag);
+  //console.log(word);
+  return currentTag === word;
+};
 ---
 
 <div class="mb-6 flex flex-row flex-wrap items-center justify-start gap-2">
   <ChipsFilter
     name="all"
-    slug="/tags"
-    isfocus={`${currentTag === "post" ? true : false}`}
+    slug="/posts"
+    isfocus={atest("posts") ? true : false}
   />
   {
     tags.map((t) => (
-      <>
-        <ChipsFilter name={t.name} slug={`/tag/${t.slug}`} />
-      </>
+      <ChipsFilter
+        name={t.name}
+        slug={`/posts/tag/${t.slug}`}
+        isfocus={atest(t.slug) ? true : false}
+      />
     ))
   }
 </div>
