--- a/apps/frontend/src/pages/post/[slug].astro
+++ b/apps/frontend/src/pages/post/[slug].astro
@@ -1,10 +1,10 @@
 ---
-import Layout from "../../layouts/Layout.astro";
-import LayoutPost from "../../layouts/LayoutPost.astro";
-import { getAllPosts, getPost } from "../../lib/client";
+import LayoutPost from "@/layouts/LayoutPost.astro";
+import Layout from "@/layouts/Layout.astro";
+import { getAllPosts, getPost } from "@/lib/client";
 import { HeroPost, MarkdownCode, ShareIt } from "@drowr/licid";
 import { Markdown } from "@astropub/md";
-import config from "../../config/config.json";
+import config from "@/config/config.json";
 
 export async function getStaticPaths() {
   const data = await getAllPosts();
