--- a/packages/licid/src/blocks/hero/Home.astro
+++ b/packages/licid/src/blocks/hero/Home.astro
@@ -9,7 +9,7 @@ const { author } = Astro.props;
   class="herohome relative flex items-center justify-center overflow-hidden py-8"
 >
   <div class="max-[900px] z-10 text-center transition-colors ease-out">
-    <div class="body-large">Hi, i'm</div>
+    <div class="body-large">Hi, I'm</div>
     <h1 class="text-primary dark:text-dark-primary display-medium">{author}</h1>
     <p class="title-large py-4">Fullstack JS & Creative coder</p>
     <p class="body-small max-w-150">
@@ -23,7 +23,7 @@ const { author } = Astro.props;
       >
         <div class="hover:bg-onPrimary/10 dark:hover:bg-dark-onPrimary/10 flex">
           <a class="flex items-center px-6" href="/">
-            <span class="label-medium">View project -&gt;</span>
+            <span class="label-medium">View projects -&gt;</span>
           </a>
         </div>
       </div>
@@ -32,7 +32,7 @@ const { author } = Astro.props;
         class="bg-outlineVariant dark:bg-dark-outlineVariant text-onSurfaceVariant dark:text-dark-onSurfaceVariant flex min-h-14 rounded-full"
       >
         <div class="hover:bg-onPrimary/10 dark:hover:bg-dark-onPrimary/10 flex">
-          <a class="flex items-center px-6" href="/post">
+          <a class="flex items-center px-6" href="/posts">
             <span class="label-medium">Look posts</span>
           </a>
         </div>
