--- a/apps/frontend/src/pages/index.astro
+++ b/apps/frontend/src/pages/index.astro
@@ -1,33 +1,13 @@
 ---
-import { CardOutlined, HeroHome } from "@drowr/licid";
-import config from "../config/config.json";
-import Layout from "../layouts/Layout.astro";
-import { getAllPosts } from "../lib/client";
-
-const data = await getAllPosts();
-const allPosts = data.publication.posts.edges;
+import { HeroHome } from "@drowr/licid";
+import RecentsPosts from "@/blocks/home/RecentsPosts.astro";
+import Layout from "@/layouts/Layout.astro";
+import config from "@/config/config.json";
 ---
 
 <Layout>
   <div class="container">
     <HeroHome author={config.site.author} />
-    <!--
-    {JSON.stringify(allPosts)}
-    <TypoDisplayLarge title="Recent posts" />
-    -->
-    {
-      allPosts.map((post) => (
-        <CardOutlined
-          brief={post.node.subtitle}
-          title={post.node.title}
-          publishedAt={post.node.publishedAt}
-          tags={post.node.tags}
-          slug={post.node.slug}
-        >
-          <Fragment slot="header" />
-          <Fragment slot="footer" />
-        </CardOutlined>
-      ))
-    }
+    <RecentsPosts />
   </div>
 </Layout>
