--- a/packages/licid/src/blocks/hero/Post.astro
+++ b/packages/licid/src/blocks/hero/Post.astro
@@ -34,7 +34,7 @@ const formattedUpdDate = new Intl.DateTimeFormat("en-US", options).format(
 <header class="pt-14 pb-6">
   <div class="mb-12">
     <a
-      href="/post"
+      href="/posts"
       class="back-link text-primary dark:text-dark-primary mb-8 block"
       >← Back to Blog</a
     >
