--- a/packages/licid/src/blocks/markdown/code.astro
+++ b/packages/licid/src/blocks/markdown/code.astro
@@ -16,10 +16,10 @@ import "../../styles.css";
     }
     pre.astro-code {
       @apply my-6 rounded-lg p-2;
-      @apply font-brand text-[12pt] leading-[16pt] font-normal tracking-[0.1pt] not-italic font-stretch-normal;
+      @apply font-plain text-[12pt] leading-[16pt] font-normal tracking-[0.1pt] not-italic font-stretch-normal;
     }
     p {
-      @apply font-brand text-[14pt] leading-[20pt] font-normal tracking-[0] not-italic font-stretch-normal;
+      @apply font-plain text-[14pt] leading-[20pt] font-normal tracking-[0] not-italic font-stretch-normal;
     }
   }
 </style>
