Buttons with aria-label

--- a/packages/licid/src/Header.astro
+++ b/packages/licid/src/Header.astro
@@ -15,7 +15,7 @@ import ThemeSwitcher from "./components/header/ThemeSwitcher.astro";
     </div>
     {/* right buttons */}
     <div class="order-1 ml-auto flex items-center md:order-2 lg:ml-0">
-      <ButtonIcon classes="mr-2">
+      <ButtonIcon classes="mr-2" label="Search posts">
         <IconSearch
           width={24}
           height={24}
@@ -24,7 +24,7 @@ import ThemeSwitcher from "./components/header/ThemeSwitcher.astro";
         />
       </ButtonIcon>
       <ThemeSwitcher />
-      <ButtonIcon>
+      <ButtonIcon label="Open navigation menu">
         <IconMenu
           width={24}
           height={24}
