--- a/packages/licid/src/Logo.astro
+++ b/packages/licid/src/Logo.astro
@@ -17,7 +17,7 @@ const { logoImage = logoSrc, logoText = "Drowr" } = Astro.props;
     class="inline-block"
     width="70"
     height="60"
-    alt="drowr"
+    alt="Home page"
     style="height: 60px;"
     loading="eager"
     decoding="async"
@@ -25,6 +25,7 @@ const { logoImage = logoSrc, logoText = "Drowr" } = Astro.props;
   />
   <span class="headline-small ml-1 align-middle">{logoText}</span>
 </a>
+
 <style>
   @reference "./styles.css";
   .navbar-brand {
