--- a/packages/licid/src/components/header/ThemeSwitcher.astro
+++ b/packages/licid/src/components/header/ThemeSwitcher.astro
@@ -4,7 +4,7 @@ import ButtonIcon from "../button/IconStandard.astro";
 ---
 
 <div id="theme-switcher">
-  <ButtonIcon classes="mr-2">
+  <ButtonIcon classes="mr-2" label="Theme colors switcher">
     <IconDarkMode
       width={24}
       height={24}
