--- a/apps/frontend/src/blocks/home/RecentsPosts.astro
+++ b/apps/frontend/src/blocks/home/RecentsPosts.astro
@@ -4,6 +4,16 @@ import { CardOutlined } from "@drowr/licid";
 
 const data = await getAllPosts();
 const allPosts = data.publication.posts.edges;
+
+function filterPost(item) {
+  const hasTheme = item.node.tags.map((tag) => tag.name).includes("themes");
+  if (hasTheme) {
+    return false;
+  }
+  return true;
+}
+
+const allPostsFiltered = allPosts.filter(filterPost);
 ---
 
 <section id="recent-posts">
@@ -20,7 +30,7 @@ const allPosts = data.publication.posts.edges;
   <p class="body-small mb-12 text-center">Latest articles from the blog</p>
   <div class="grid grid-cols-1 gap-6 md:grid-cols-2">
     {
-      allPosts.map((post) => (
+      allPostsFiltered.map((post) => (
         <CardOutlined
           brief={post.node.subtitle}
           title={post.node.title}
